netpol/deploy-blue-app-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
        backend: mysql
    spec:
      containers:
      - name: blue
        image: avinashdesireddy/colored-canavas:v2
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: blue
  ports:
  - port: 8080
    targetPort: 8080
