netpol/1.default-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: default-deny-all
spec:
 podSelector: {}
 policyTypes:
 - Ingress
 - Egress
 egress:
 - to:
   - namespaceSelector:
       matchLabels: 
         kubernetes.io/metadata.name: kube-system
     podSelector:
       matchLabels: 
         k8s-app: kube-dns
   ports:
   - protocol: UDP
     port: 53
